<resources>
    <string name="album_name">CameraSample</string>
    <string name="app_name">TucitaApp</string>
    <string name="title_activity_principal">Tucita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emailUser">android.studio@android.com</string>
    <string name="Preferences">Preferencias</string>
    <string name="title_activity_login">Registro</string>

    <!-- Strings related to login -->
    <string name="prompt_fecha">Seleccione la fecha</string>
    <string name="prompt_spinner">Selecccione tipo de documento</string>
    <string name="prompt_spinner_centro">Seleccione el centro de produccion</string>
    <string name="prompt_spinner_profesional">Seleccione el profesional de preferencia</string>
    <string name="prompt_documento">Documento</string>
    <string-array name="TipoDocumento">
        <item>Cedula de ciudadania</item>
        <item>Tarjeta de identidad</item>
        <item>Cedula de extranjeria</item>
        <item>Registro civil</item>
        <item>Pasaporte</item>
    </string-array>
    <string name="action_sign_in">Ingresar </string>
    <string name="action_sign_in_short">Registro</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings relacionados con perfil -->
    <string name="prompt_nombre1">Primer nombre</string>
    <string name="prompt_nombre2">Segundo nombre</string>
    <string name="prompt_apellido1">Primer apellido</string>
    <string name="prompt_apellido2">Segundo apellido</string>
    <string name="prompt_tipo">Tipo de documento</string>
    <string name="lista_cedula">Cedula de ciudadania</string>
    <string name="lista_tarjeta">Tarjeta de identidad</string>
    <string name="lista_extranjeria">Cedula de extranjeria</string>
    <string name="lista_civil">Registro civil</string>
    <string name="lista_pasaporte">Pasaporte</string>

    <!-- Strings relacionados con menu -->
    <string name="menu_settings">Configuracion</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_close">Cerrar sesion</string>
    <string name="menu_exit">Salir</string>

    <!-- Strings relacionados con reserva de cita -->
    <string name="edit_message">Introducir un mensaje</string>
    <string name="button_send">Enviar</string>
    <string name="title_activity_display_message">Mi mensaje</string>
    <string name="Confirmation">Confirmacion</string>
    <string name="Important">Importante</string>
    <string name="Confirm">Confirmar</string>
    <string name="ExitMessage">¿Desea salir de la aplicacion?</string>
    <string name="CloseMessage">¿Desea cerrar la sesion?</string>
    <string name="Cancel">Cancelar</string>
    <string name="MessageExitProgram">Sesion cerrada</string>
    <string name="Welcome">Bienvenido</string>
    <string name="CitaMessage">¿Desea reservar una cita para el dia:</string>
    <string name="title_reserva_cita">Reserva de citas medicas</string>
    <string name="button_reservar_cita_on">Buscando</string>
    <string name="button_reservar_cita_off">Buscar</string>
    <string name="Toast_ningun_resultado">No se encontraron resultados</string>




    <string-array name="TipoDeCita">
        <item>Escoje un profesional</item>
        <item>Medico</item>
        <item>Odontologo</item>
    </string-array>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_settings">Configuracion</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="buscar">Buscar</string>

</resources>
