<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andret199377hotmail.learning.com.tucitaapp.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center_vertical"
        android:mirrorForRtl="false"
        android:layout_margin="80dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="50dp">

                <ImageView
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:id="@+id/imageView2"
                    android:src="@mipmap/haztucita"
                    android:contentDescription="Haztucita"
                    android:elevation="5dp"
                    android:focusable="false" />
            </LinearLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:prompt="@string/prompt_spinner"
                android:spinnerMode="dialog" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/documento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_documento"
                    android:inputType="number|text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:background="@drawable/stylebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:onClick="registrar"
                android:accessibilityLiveRegion="none"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textColor="@color/blanco"
                android:singleLine="false" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
