<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Foto de perfil"
                    android:id="@+id/textView11"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imagendeperfil"
                    android:layout_weight="2" />
                <ImageButton
                    android:id="@+id/btnIntend"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_a_photo_black_48dp"
                    android:nestedScrollingEnabled="true"
                    android:onClick="tomarFoto" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:orientation="horizontal"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prompt_nombre1"
                    android:id="@+id/textView3"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Nombre1"
                    android:layout_weight="1.5" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:orientation="horizontal"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_nombre2"
                    android:id="@+id/textView5"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Nombre2"
                    android:layout_weight="1.5" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:orientation="horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prompt_apellido1"
                    android:id="@+id/textView7"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Apellido1"
                    android:layout_weight="1.5" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:orientation="horizontal"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prompt_apellido2"
                    android:id="@+id/textView9"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/Apellido2"
                    android:layout_weight="1.5" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>